Make-appointment process now supports displaying by actual available employees per hour of day. Apprenticeships process is mostly working

--- a/backend/templates/SignUp.html
+++ b/backend/templates/SignUp.html
@@ -89,7 +89,7 @@
 <body>
 
     <div id="form-container">
-        <form id="signup-form" method="POST" action="http://localhost:8080/signup">
+        <form id="signup-form" method="POST" action="/signup">
             <h2>איזה כיף שאת מצטרפת אלינו, מלאי את טופס ההרשמה לסיום יצירת המשתמש</h2>
 
             <select id="account_type" name="account_type">
